<resources>
    <string name="app_name">Converter</string>
    <string name="inch_to_centimeter">Inch to Centimeter</string>
    <string name="inch">Inch</string>
    <string name="enter_the_value_of_inch"></string>
    <string name="cm">Cm</string>
    <string name="foot">Foot</string>
    <string name="meter_to_centimeter">Meter to centimeter</string>
    <string name="meter">Meter</string>
    <string name="litre_to_millilitre">Liter to milliliter</string>
    <string name="celcius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="todo">TODO</string>
    <string name="list_item">List Item</string>
    <string name="killometer_sq_to_meter_sq">Kilometer Sq to Meter Sq</string>
    <string name="killometer_sq">Kilometer Sq</string>
    <string name="meter_square">Meter Square</string>
    <string name="meterquare">Meter Square to Foot Square</string>
    <string name="foot_square">Foot Square</string>
    <string name="acre_to_foot_square">Acre to Foot Square</string>
    <string name="meter_sec_to_killiometer_sec">Meter/Sec to Kilometer/Sec</string>
    <string name="kilometer_sec">Kilometer/Sec</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="killometer_hrs_to_meter_hrs">Kilometer/Hrs to Meter/Hrs</string>
    <string name="milliter">Milliter</string>
    <string name="liter">Liter</string>
    <string name="your_weight_on_moon">Your weight on moon</string>
    <string name="height_in_inches">Height in inches</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="calculate_love">Calculate Love %</string>
    <string name="partner_name">Partner name</string>
    <string name="your_name">Your name</string>
    <string name="this_love_calculator_is_just_for_fun_and_entertainment_don_t_take_the_results_too_seriously">This Love Calculator is just for fun and entertainment—don\'t take the results too seriously! 😊</string>
    <string name="convert">Convert</string>
    <string name="enter_amount">Enter amount</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="enter_number_of_terms">Enter Number of Terms</string>
    <string name="add_terms">Add Terms</string>
    <string name="cgpa_and_cgpa_percentile_calculator">CGPA</string>
    <string name="scgpa">SCGPA</string>
    <string name="calculate_scgpa">Calculate SCGPA</string>
    <string name="no_of_subjects">No of subjects</string>
    <string name="add_subjects">Add subjects</string>
</resources>