<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blue"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/paisa" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/card_border"
        android:orientation="vertical">



    <!-- Spinner for From Currency -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/dark"
                android:text="@string/from"/>
            <Spinner
                android:id="@+id/spinner_from_currency"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:popupBackground="@color/white"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/enter_amount"
                android:background="@drawable/card_border"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark"
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/dark"
                android:text="@string/to"/>

    <!-- Spinner for To Currency -->
    <Spinner
        android:id="@+id/spinner_to_currency"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:popupBackground="@color/white"
        android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:background="@drawable/card_border"
                android:padding="10dp"/>
        </LinearLayout>
    <!-- Convert Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white" />


    </LinearLayout>

</LinearLayout>
