<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".BMI">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blue"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/bmi" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body_mass_index"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:text="@string/weight"/>
            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_border"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:padding="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:text="@string/height_in_inches"/>

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_border"
                android:textColor="@color/black"

                android:inputType="numberDecimal"
                android:padding="10dp"/>
        </LinearLayout>

    </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_bmi"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/blue"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@android:color/white" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="1dp"
    android:layout_margin="15dp"
    android:background="@drawable/card_border"
    android:padding="10dp"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_weight_on_moon"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/moon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/red"
        />
    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="@color/dark"
        />
</LinearLayout>
    </LinearLayout>

</LinearLayout>