<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Speed">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blue"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/unit_converter" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <!-- KMPH to MPH Conversion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="1dp"
        android:layout_margin="15dp"
        android:background="@drawable/card_border"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/killometer_hrs_to_meter_hrs"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark"
                    android:text="Killometer/Hrs" />

                <EditText
                    android:id="@+id/input_kmph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_value_of_inch"
                    android:background="@drawable/card_border"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark"
                    android:text="Meter/Hrs" />

                <EditText
                    android:id="@+id/input_mph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_value_of_inch"
                    android:background="@drawable/card_border"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:inputType="numberDecimal"
                    android:importantForAccessibility="no" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- MPS to KMPH Conversion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="1dp"
        android:layout_margin="15dp"
        android:background="@drawable/card_border"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meter_sec_to_killiometer_sec"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark"
                    android:text="@string/meter_sec" />

                <EditText
                    android:id="@+id/mps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_value_of_inch"
                    android:background="@drawable/card_border"
                    android:padding="10dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:importantForAccessibility="no" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark"
                    android:text="@string/kilometer_sec" />

                <EditText
                    android:id="@+id/kmh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_the_value_of_inch"
                    android:background="@drawable/card_border"
                    android:padding="10dp"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:importantForAccessibility="no" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
